--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Figma Make Local Runner</title>
+    <meta name="theme-color" content="#3E2723" />
+    <meta name="description" content="Track your sauna sessions and wellness journey" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+    <title>Sauna Journal</title>
   </head>
   <body>
     <div id="root"></div>
